--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,9 @@
       "react-app/jest"
     ]
   },
+  "engines": { 
+    "node": "19.6.0" 
+  },
   "browserslist": {
     "production": [
       ">0.2%",
