--- a/server/package.json
+++ b/server/package.json
@@ -60,6 +60,9 @@
     "tsconfig-paths": "4.2.0",
     "typescript": "^4.7.4"
   },
+  "engines": { 
+    "node": "19.6.0" 
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
